# jupitercpp_ws

./: .gitignore  CLAUDE.md  floor_pitch_check.py  record_mapping_run.sh  scan_sectors.py
docs/: DOCK_FUSION_BRINGUP.md  JUPITER_ROBOT_DESIGN.md  NAV2_STATUS.md  THOR_USB_DMA.md
firmware/dock_beacon/: platformio.ini
firmware/dock_beacon/src/: jupiter_dock_beacon.ino
firmware/dock_charger/: platformio.ini
firmware/dock_charger/src/: dock_charger.ino
firmware/esp32/: jupitercpp_ws.code-workspace  platformio.ini
firmware/esp32/include/: encoder.h  imu_bno055.h  jupiter_config.h  kinematics.h  motor.h  oled_ssd1306.h  pid.h
firmware/esp32/src/: encoder.cpp  firmware.ino  imu_bno055.cpp  kinematics.cpp  motor.cpp  oled_1306.cpp  pid.cpp
hardware/: ir_receiver_shroud.scad
maps/: apartment.pgm  apartment.yaml  apartment_s2e.pgm  apartment_s2e.yaml  apartment_s2e_v2.pgm  apartment_s2e_v2.yaml  lab_map.pgm  lab_map.yaml  lab_map2.pgm  lab_map2.yaml  lab_passage_map.pgm  lab_passage_map.yaml  lounge_deskewed.pgm  lounge_deskewed.yaml  lounge_kitchen.pgm  lounge_kitchen.yaml  lounge_live.pgm  lounge_live.yaml  lounge_patital_map.pgm  lounge_patital_map.yaml  map.pgm  map.yaml
maps/visual_map/: data.mdb
scripts/: dock_range_monitor.py  drive_pulse.py  ir_monitor.py  ir_rate_monitor.py  scan_rear_peek.py
src/jupiter_audio_capture/: CMakeLists.txt  package.xml
src/jupiter_audio_capture/src/: mic_capture_node.cpp
src/jupiter_bringup/: CMakeLists.txt  package.xml
src/jupiter_bringup/config/: docking_server.yaml  ekf.yaml  ekf_odom.yaml  nav2_params.yaml  navigate_through_poses_omni.xml  navigate_to_pose_omni.xml  orbbec_gemini336_profiles.md  slam_params.yaml  startup_strategy.md
src/jupiter_bringup/launch/: apriltag_detect_test.launch.py  camera.launch.py  camera_ai.launch.py  dock_ir.launch.py  dock_ir_nodes.launch.py  dock_opennav.launch.py  dock_simple.launch.py  jupiter_bringup.launch.py  jupiter_bringup_full.launch.py  jupiter_full_s2e.launch.py  ld20_low.launch.py  localization.launch.py  navigation.launch.py  navigation_s2e.launch.py  nvblox.launch.py  offline_mapping.launch.py  offline_mapping_deskew.launch.py  record_mapping.launch.py  slam.launch.py  slam_mapping.launch.py  slam_mapping_s2e.launch.py  teleop_test.launch.py  visual_slam.launch.py
src/jupiter_bringup/maps/: c82_map_real.yaml
src/jupiter_bringup/rviz/: jupiter_nav.rviz
src/jupiter_bringup/scripts/: jupiter-usb-camera-fix.sh  lidar_watchdog.sh
src/jupiter_bringup/systemd/: jupiter-usb-camera-fix.service
src/jupiter_display/: CMakeLists.txt  package.xml
src/jupiter_display/qml/: JupiterFace.qml
src/jupiter_display/src/: display_node.cpp
src/jupiter_nav/: CMakeLists.txt  package.xml
src/jupiter_nav/include/jupiter_nav/: astar.hpp  occupancy_map.hpp
src/jupiter_nav/launch/: jupiter_nav.launch.py
src/jupiter_nav/src/: jupiter_planner_node.cpp  occupancy_map.cpp
src/jupiter_nodes/: CMakeLists.txt  package.xml
src/jupiter_nodes/src/: brain.cpp  diagnostics.cpp  dock_approach.cpp  dock_ir.cpp  dock_range.cpp  face_recognition.cpp  imu_covariance_fixer.cpp  nvblox_slice_relay.cpp  scan_deskew_node.cpp  tf_flattener.cpp  vision.cpp  vision_test.cpp  voice.cpp  webcam_publisher.cpp
src/jupiter_wakeword/: CMakeLists.txt  package.xml
src/jupiter_wakeword/src/: wake_word_node.cpp
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/ldlidar_stl_ros2/ldlidar_driver/src/logger/: log_module.cpp
