<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jupiter_bringup</name>
  <version>0.0.1</version>
  <description>Jupiter Robot — system bringup, localization and navigation configuration</description>
  <maintainer email="naidoo.logan@gmail.com">Logan Naidoo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
